# ggg

./: .gitignore  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md  main.cpp
.github/ISSUE_TEMPLATE/: nova-tarefa--template-.md  template_ana-template-.md  template_ana.md
dados/: README_DADOS.txt
src/: Coordenada.hpp  Elemento.hpp  Ente.cpp  Ente.hpp  Erros.cpp  Erros.hpp  Estado.cpp  Estado.hpp  Evento.cpp  Evento.hpp  Grafico.cpp  Grafico.hpp  Jogo.cpp  Jogo.hpp  Lista.hpp  main.cpp  testes.cpp  testes.hpp
src/ElementosGraficos/: Forma.cpp  Forma.hpp  Texto.cpp  Texto.hpp
src/Entidades/: Ente.cpp  Ente.hpp  Entidade.cpp  Entidade.hpp  Projetil.cpp  Projetil.hpp
src/Entidades/Obstaculos/: Borracha.cpp  Borracha.hpp  Lapis.cpp  Lapis.hpp  Obstaculo.cpp  Obstaculo.hpp  (+4 more)
src/Estados/: Estado.cpp  Estado.hpp  EstadoJogo.cpp  EstadoJogo.hpp  EstadoMenu.cpp  EstadoMenu.hpp
src/Fases/: Calabouco.cpp  Calabouco.hpp  Fase.cpp  Fase.hpp  Fase1.hpp  FaseTeste.cpp  FaseTeste.hpp  Tuneis.cpp  Tuneis.hpp
src/Gerenciadores/: Evento.cpp  Evento.hpp  GerenciadorColisoes.cpp  GerenciadorColisoes.hpp  GerenciadorEstados.cpp  GerenciadorEstados.hpp  GerenciadorEventos.cpp  GerenciadorEventos.hpp  GerenciadorGrafico.cpp  GerenciadorGrafico.hpp  Grafico.cpp  Grafico.hpp
src/Listas/: IteradorAbstrato.hpp  Lista.hpp  ListaEntidades.cpp  ListaEntidades.hpp
src/Menus/: Menu.hpp  MenuFinal.cpp  MenuFinal.hpp  MenuPause.cpp  MenuPause.hpp  MenuPrincipal.cpp  MenuPrincipal.hpp  Ranking.cpp  Ranking.hpp
src/Testes/: testes.cpp  testes.hpp
uml/: README-UML.txt  diagrama_classes.mdj
(+12 files in other folders)
